# opnsense-mcp-server

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.txt  Makefile  PLAN.md  README.md  SECURITY.md  TEST_RESULTS.md  docker-compose.yaml  opnsense-mcp-server.py  opnsense-mcp-server.py.bak  pyproject.toml  pytest.ini  requirements.txt  setup-claude.sh  setup.py
.github/workflows/: ci.yml  release.yml  security.yml
docs/archive/: DOCUMENTATION_AUDIT.md  TEST_FIX_SUMMARY.md  TEST_RESULTS_phase1.md  TEST_RESULTS_phase2.md
scripts/: setup-test-env.sh  test-coverage.sh  test-quick.sh  test-specific.sh  test.sh
src/opnsense_mcp/: __init__.py  main.py
src/opnsense_mcp/cli/: __init__.py  delete.py  list.py  setup.py  test.py
src/opnsense_mcp/core/: __init__.py  client.py  config_loader.py  connection.py  exceptions.py  models.py  retry.py  state.py
src/opnsense_mcp/domains/: __init__.py  certificates.py  configuration.py  dns_dhcp.py  firewall.py  logging.py  nat.py  network.py  system.py  traffic_shaping.py  users.py  utilities.py  vpn.py
src/opnsense_mcp/shared/: __init__.py  constants.py  error_handlers.py  error_sanitizer.py
tests/: README.md  conftest.py  test_integration.py
tests/fixtures/: __init__.py  mock_responses.py
tests/test_cli/: __init__.py  test_delete.py  test_list.py  test_setup.py  test_test.py
tests/test_core/: test_client_advanced.py  test_client_basic.py  test_config_loader.py  test_connection.py  test_exceptions.py  test_models.py  test_retry.py  test_state.py
tests/test_domains/: test_advanced_domains.py  test_configuration.py  test_firewall_nat.py  test_network_services.py  test_system.py  test_utilities_vpn.py
tests/test_integration/: test_secure_config.py
tests/test_security/: __init__.py  test_credential_security.py
tests/test_shared/: test_constants.py  test_error_handlers.py  test_error_sanitizer.py
